[tool.poetry]
name = "mahlkoenig"
version = "0.1.0"
description = "CLI tool to interact with the Mahlkönig API"
authors = ["Fabian Affolter <fabian-affolter@audius.de>"]
readme = "README.md"
license = "MIT"
keywords = ["grinders", "api"]
homepage = "https://github.com/audius/mahlkoenig"
repository = "https://github.com/audius/mahlkoenig"

[tool.poetry.dependencies]
python = "^3.13"
typer = {extras = ["all"], version = "^0.24"}
validators = "^0.35"
httpx = "^0.28.0"
typing-extensions = "^4.12.2"

[tool.poetry.dev-dependencies]
pytest = "^9"
isort = "^5.13"

[tool.poetry.scripts]
mahlkoenig = "mahlkoenig.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
