[tool.poetry]
name = "mahlkoenig"
version = "0.2.0"
description = "CLI tool to interact with the Mahlkönig API"
authors = ["Fabian Affolter <fabian-affolter@audius.de>"]
readme = "README.md"
license = "MIT"
keywords = ["grinders", "api"]
homepage = "https://github.com/audius/mahlkoenig"
repository = "https://github.com/audius/mahlkoenig"

[tool.poetry.dependencies]
python = "^3.13"
httpx = "^0.28.0"
rich = "^14.0.0"
typer = {extras = ["all"], version = "^0.24"}
typing-extensions = "^4.12.2"
validators = "^0.35"

[tool.poetry.group.dev.dependencies]
pytest = "^9"
isort = "^5.13"

[tool.poetry.scripts]
mahlkoenig = "mahlkoenig.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
